# juskata

./: CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: __init__.py  juskata.py
src/juskata/: __init__.py  juskata.py
tests/: test_juskata.py
